--- a/QuipVid/AppShell.xaml
+++ b/QuipVid/AppShell.xaml
@@ -7,7 +7,7 @@
        x:Class="QuipVid.AppShell">
     <Shell.Resources>
         <ResourceDictionary>
-            <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
+            <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
         </ResourceDictionary>
     </Shell.Resources>
 
