--- a/QuipVid/App.xaml
+++ b/QuipVid/App.xaml
@@ -4,6 +4,7 @@
              x:Class="QuipVid.App">
     <Application.Resources>
         <Color x:Key="NavigationPrimary">#272727</Color>
+        <Color x:Key="NavigationAccent">#FFCD00</Color>
         <Style x:Key="BaseStyle" TargetType="Element">
             <Setter Property="Shell.BackgroundColor" Value="{StaticResource NavigationPrimary}" />
             <Setter Property="Shell.ForegroundColor" Value="White" />
