--- a/QuipVid/Views/ItemsPage.xaml
+++ b/QuipVid/Views/ItemsPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:QuipVid.Controls;assembly=QuipVid"
              x:Class="QuipVid.Views.ItemsPage"
              Title="{Binding Title}"
              x:Name="BrowseItemsPage">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="AddItem_Clicked" />
-    </ContentPage.ToolbarItems>
+    <Shell.SearchHandler>
+        <controls:QuipSearchHandler />
+    </Shell.SearchHandler>
     <StackLayout>
         <ListView x:Name="ItemsListView"
                   ItemsSource="{Binding Items}"
