--- a/QuipVid/AppShell.xaml
+++ b/QuipVid/AppShell.xaml
@@ -12,16 +12,16 @@
         </ResourceDictionary>
     </Shell.Resources>
 
-    <FlyoutItem>
+    <FlyoutItem Title="Home">
         <Tab>
-            <ShellContent Title="QuipVid" Style="{StaticResource DefaultShellStyle}">
+            <ShellContent Style="{StaticResource DefaultShellStyle}">
                 <views:ItemsPage />
             </ShellContent>
         </Tab>
     </FlyoutItem>
-    <FlyoutItem>
+    <FlyoutItem Title="About">
         <Tab>
-            <ShellContent Title="About" Style="{StaticResource DefaultShellStyle}">
+            <ShellContent Style="{StaticResource DefaultShellStyle}">
                 <views:AboutPage />
             </ShellContent>
         </Tab>
