--- a/QuipVid/Views/ItemsPage.xaml
+++ b/QuipVid/Views/ItemsPage.xaml
@@ -4,7 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:QuipVid.Controls;assembly=QuipVid"
              x:Class="QuipVid.Views.ItemsPage"
-             Title="{Binding Title}"
+             Title="QuipVid"
              x:Name="BrowseItemsPage">
     <Shell.SearchHandler>
         <controls:QuipSearchHandler />
