--- a/QuipVid/Views/ItemsPage.xaml
+++ b/QuipVid/Views/ItemsPage.xaml
@@ -3,12 +3,19 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:QuipVid.Controls;assembly=QuipVid"
+             xmlns:images="clr-namespace:QuipVid.Images;assembly=QuipVid"
              x:Class="QuipVid.Views.ItemsPage"
-             Title="QuipVid"
              x:Name="BrowseItemsPage">
     <Shell.SearchHandler>
         <controls:QuipSearchHandler />
     </Shell.SearchHandler>
+    <Shell.TitleView>
+        <StackLayout Orientation="Horizontal">
+            <StackLayout Orientation="Horizontal" VerticalOptions="Center" HeightRequest="30">
+                <Image Source="{images:ImageResource QuipVid.Images.logo.png}" Aspect="AspectFit" HorizontalOptions="EndAndExpand"></Image>
+            </StackLayout>
+        </StackLayout>
+    </Shell.TitleView>
     <StackLayout>
         <ListView x:Name="ItemsListView"
                   ItemsSource="{Binding Items}"
