--- a/QuipVid/Controls/QuipCarousel.xaml
+++ b/QuipVid/Controls/QuipCarousel.xaml
@@ -2,7 +2,9 @@
 <StackLayout xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:carousel="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions"
-             x:Class="QuipVid.Controls.QuipCarousel">
+             xmlns:images="clr-namespace:QuipVid.Images;assembly=QuipVid"
+             x:Class="QuipVid.Controls.QuipCarousel"
+             BackgroundColor="{StaticResource PrimaryColor}">
     <carousel:CarouselViewControl Orientation="Horizontal"
                                   Position="0"
                                   VerticalOptions="FillAndExpand"
@@ -15,7 +17,7 @@
                 <x:String>Test 1</x:String>
                 <x:String>Test 2</x:String>
                 <x:String>Test 3</x:String>
-                <x:String>Test 3</x:String>
+                <x:String>Test 4</x:String>
             </x:Array>
         </carousel:CarouselViewControl.ItemsSource>
         <carousel:CarouselViewControl.ItemTemplate>
@@ -25,8 +27,8 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="300" />
                         </Grid.RowDefinitions>
-
                         <Image Source="https://via.placeholder.com/600x300" Aspect="AspectFill" Grid.Row="0" />
+                        <Image Source="{images:ImageResource QuipVid.Images.carouseloverlay.png}" Aspect="AspectFill" Grid.Row="0" />
                         <StackLayout Grid.Row="0" Padding="20">
                             <StackLayout VerticalOptions="StartAndExpand" />
                             <StackLayout VerticalOptions="End">
