--- a/QuipVid/Controls/QuipCarousel.xaml
+++ b/QuipVid/Controls/QuipCarousel.xaml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <StackLayout xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:carousel="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions"
@@ -28,11 +29,20 @@
                             <RowDefinition Height="300" />
                         </Grid.RowDefinitions>
                         <Image Source="https://via.placeholder.com/600x300" Aspect="AspectFill" Grid.Row="0" />
-                        <Image Source="{images:ImageResource QuipVid.Images.carouseloverlay.png}" Aspect="AspectFill" Grid.Row="0" />
-                        <StackLayout Grid.Row="0" Padding="20">
+                        <Image Source="{images:ImageResource QuipVid.Images.carouseloverlay.png}"
+                               Aspect="AspectFill"
+                               Grid.Row="0" />
+                        <StackLayout Grid.Row="0" Padding="25,0,0,30">
                             <StackLayout VerticalOptions="StartAndExpand" />
-                            <StackLayout VerticalOptions="End">
-                                <Label VerticalOptions="End" HorizontalOptions="Start" Text="{Binding .}" />
+                            <StackLayout VerticalOptions="End" Spacing="0">
+                                <Label Text="King of the hill" TextColor="White" />
+                                <Label Text="Toilet Sounds" TextColor="White" FontSize="Large" FontAttributes="Bold" />
+                                <Button Text="Browse Series"
+                                        HorizontalOptions="Start"
+                                        BackgroundColor="Transparent"
+                                        Padding="0"
+                                        Margin="0,-15,0,0"
+                                        TextColor="{StaticResource AccentColor}" />
                             </StackLayout>
                         </StackLayout>
                     </Grid>
