--- a/QuipVid/Views/HomePage.xaml
+++ b/QuipVid/Views/HomePage.xaml
@@ -4,7 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:QuipVid.Controls;assembly=QuipVid"
              x:Class="QuipVid.Views.HomePage"
-             x:Name="BrowseItemsPage">
+             x:Name="BrowseItemsPage"
+             BackgroundColor="{StaticResource SecondaryColor}">
     <Shell.SearchHandler>
         <controls:QuipSearchHandler />
     </Shell.SearchHandler>
@@ -12,8 +13,11 @@
         <controls:Logo />
     </Shell.TitleView>
     <ScrollView>
-        <StackLayout>
+        <StackLayout Padding="0,0,0,40" Spacing="20">
             <controls:QuipCarousel x:Name="QuipCarousel" />
+            <controls:HorizontalCardSet />
+            <controls:HorizontalCardSet />
+            <controls:HorizontalCardSet />
         </StackLayout>
     </ScrollView>
 </ContentPage>
