--- a/QuipVid/Views/AboutPage.xaml
+++ b/QuipVid/Views/AboutPage.xaml
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:d="http://xamarin.com/schemas/2014/forms/design" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="QuipVid.Views.AboutPage" xmlns:vm="clr-namespace:QuipVid.ViewModels" Title="{Binding Title}">
+
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:QuipVid.ViewModels"
+             xmlns:utils="clr-namespace:QuipVid.Utils;assembly=QuipVid"
+             x:Class="QuipVid.Views.AboutPage"
+             Title="{Binding Title}">
     <ContentPage.BindingContext>
         <vm:AboutViewModel />
     </ContentPage.BindingContext>
@@ -60,7 +66,12 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Button Margin="0,10,0,0" Text="Learn more" Command="{Binding OpenWebCommand}" BackgroundColor="{StaticResource Primary}" TextColor="White" />
+                <Button Margin="0,10,0,0"
+                        Text="{x:Static utils:FontAwesomeIcons.ArrowUp}"
+                        FontFamily="{StaticResource FontAwesomeSolid}"
+                        Command="{Binding OpenWebCommand}"
+                        BackgroundColor="{StaticResource Primary}"
+                        TextColor="White" />
             </StackLayout>
         </ScrollView>
     </Grid>
